<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <ImageView
        android:id="@+id/imageWebsite"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/web_site_logo" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="332dp"
        android:layout_height="206dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="100dp"
        tools:layout_conversion_absoluteWidth="232dp" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="122dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="phone"
        android:gravity="center"
        android:text="@string/contacts_telephone"
        app:layout_constraintBottom_toTopOf="@+id/mobilephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/imageTelephone"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/mobilephone"
        android:layout_width="122dp"
        android:layout_height="17dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="phone"
        android:gravity="center"
        android:text="@string/contacts_mobilephone"
        app:layout_constraintBottom_toTopOf="@+id/website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/imageTelephone"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.548" />

    <TextView
        android:id="@+id/website"
        android:layout_width="128dp"
        android:layout_height="17dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/contacts_website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toEndOf="@+id/imageWebsite"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageTelephone"
        android:layout_width="41dp"
        android:layout_height="62dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageWebsite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.426"
        app:srcCompat="@drawable/ic_phone_in_talk_black_24dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.514"
        app:srcCompat="@drawable/ic_email_blue_24dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="159dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:text="@string/contacts_email"
        app:layout_constraintBottom_toTopOf="@+id/website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/mobilephone"
        app:layout_constraintVertical_bias="0.376" />


</android.support.constraint.ConstraintLayout>